# todoleilao-scraper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  ISSUES_TODO.md  README.md  SPIDER_QUEUE.md  fly.caixa.toml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  cron-banks-simple.yml  cron-caixa-refazer.yml  cron-caixa-uf.yml  cron-data-quality-audit.yml  cron-geocode.yml  cron-proprio-html.yml  cron-providers-large.yml  cron-providers-medium.yml
discovery/: _common_ua.py  build_site_report.py  enrich_auctioneers.py  filter_real_estate.py  innlei_scraper.py  listing_finder.py  merge_juntas_innlei.py  site_analyzer.py
discovery/juntas_scraper/: __init__.py  __main__.py  base.py  jcdf.py  jucap.py  jucea.py  juceac.py  juceal.py  juceb.py  jucec.py  jucees.py  juceg.py  jucema.py  jucemat.py  jucemg.py  jucems.py  jucep.py  jucepa.py  jucepar.py  jucepe.py  jucepi.py  jucer.py  jucerja.py  jucern.py  jucerr.py  jucesc.py  jucese.py  jucesp.py  jucetins.py  jucisrs.py
docs/: cron_runbook.md  deploy.md
reports/: cache_missing_v2.md  dataset_summary.md  desconhecido_v2.md  innlei_recon.md  proprio_html_batch_c.md  proprio_html_batch_d.md  providers.md  providers_v2.md  quick_wins_sprint1.md  recon_arch_summary.md  site_analysis.md  spiders_progress.md
scrapy_project/: scrapy.cfg
scrapy_project/leilao_scraper/: items.py  loaders.py  pipelines.py  pipelines_supabase.py  settings.py
scrapy_project/leilao_scraper/spiders/: _bidder_lance_platform.py  _common_ua.py  _playwright_example.py  _playwright_settings.py  _provider_base.py  banco_brasil.py  base.py  bomvalor.py  bradesco.py  caixa.py  cassiano.py  degrau_publicidade.py  dg_platform.py  dummy.py  inertia_laravel_leiloes.py  leilao_br.py  leilao_pro.py  leiloes_judiciais_br.py  leiloesbr.py  leiloesweb.py  leilotech.py  mega_leiloes.py  moacira.py  muller.py  oaleiloes.py  plataforma_leiloar.py  playwright_generic.py  portal_zuk.py  projud.py  proprio_html.py  rech.py  s4b_digital.py  santander.py  sishp.py  soleon.py  suporte_leiloes.py  wordpress.py
scripts/: build_arch_status.py  build_dataset_summary.py  data_quality_audit.py  detect_providers.py  diagnose_cache_missing.py  geocode_addresses.py  load_municipality_centroids.py  repatch_cache_missing.py  run_all.py  run_batch_banks_simple.sh  run_batch_proprio_html.sh  run_batch_providers_large.sh  run_batch_providers_medium.sh  run_detect_providers_v2.py  select_arch_batch.py  spider_run_health.py
specs/_providers/: _status.md
specs/_providers/adring_leiloes/: selectors.yaml
specs/_providers/alfa_leiloes/: selectors.yaml
specs/_providers/araujo_leiloes/: selectors.yaml
specs/_providers/banco_brasil/: selectors.yaml
specs/_providers/biasi_leiloes/: selectors.yaml
specs/_providers/bomvalor/: _input.json  pilot_item.json  pilot_listing.html  pilot_source.html  recon.md  (+2 more)
sql/: address_normalization.sql  backfill_uf_extra_passes.sql  backfill_uf_from_text.sql  backfill_uf_via_municipality.sql  bootstrap_lot_address.sql  classify_unit_kind.sql  data_quality_flag.sql  dedup_auction_spatial.sql  dedup_keys.sql  email_signups.sql  extract_creditors.sql  geocode_cache.sql  lot_canonical_link.sql  parties_from_description.sql  public_v1_canonical_migration.sql  public_v1_ddl.sql  public_v1_lot_search_with_sale_mode.sql  public_v1_refresh.sql  public_v1_rpcs.sql  public_v1_stats_mv.sql  raw_ddl.sql  sale_mode.sql  spider_run_health.sql  todoleilao_ddl.sql
tests/: test_base_playwright_helpers.py  test_base_spider.py  test_enrich_auctioneers.py  test_filter_real_estate.py  test_innlei_scraper.py  test_listing_finder.py  test_loaders.py  test_pipelines.py  test_quality_flag.py  test_site_analyzer.py  test_spider_alfa_leiloes.py  test_spider_moacira.py  test_spider_muller.py  test_spider_oaleiloes.py  test_spider_schulmann_leiloes.py
validator/: lint_selectors.py  pilot_item.py  validate.py
(+211 files in other folders)
